--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,5 @@
-FAKER MATERIAL DE CONSTRUCAO -> MARKET 
-FAKER LISTA DE CELULARES -> MARKET 
+FAKER MATERIAL DE CONSTRUCAO -> MARKET (ok)
+FAKER LISTA DE CELULARES -> MARKET (ok)
 FAKER HOSPITAL,CLINICA, VETERINARIOS, DENTISTA
 FAKER EXAMES MEDICOS E CIRURGIAS         
 FAKER CRMS
