--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 FAKER MATERIAL DE CONSTRUCAO -> MARKET (ok)
 FAKER LISTA DE CELULARES -> MARKET (ok)
 FAKER HOSPITAL,CLINICA, VETERINARIOS, DENTISTA
-FAKER EXAMES MEDICOS E CIRURGIAS         
+FAKER EXAMES MEDICOS E CIRURGIAS ( fazendo )
 FAKER CRMS
 FAKER TIMES DE FUTEBOL
 FAKER ANIMAIS
 FAKER DADOS GEOGRAFICOS ( BASEADO NO TERRITÓRIO BRASILEIRO )
 FAKER DE IMAGENS
+FAKER COMENTARIO PRA REDES SOCIAIS
