--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 FAKER MATERIAL DE CONSTRUCAO -> MARKET (ok)
 FAKER LISTA DE CELULARES -> MARKET (ok)
-FAKER HOSPITAL,CLINICA, VETERINARIOS, DENTISTA
-FAKER EXAMES MEDICOS E CIRURGIAS ( fazendo )
+FAKER HOSPITAL,CLINICA, VETERINARIOS, DENTISTA (OK)
+FAKER EXAMES MEDICOS E CIRURGIAS ( OK )
+FAKER ACADEMIA, TREINOS, MAQUINAS ( FAZENDO )
 FAKER CRMS
 FAKER TIMES DE FUTEBOL
 FAKER ANIMAIS
