--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,6 @@
-FAKER MATERIAL DE CONSTRUCAO -> MARKET (ok)
-FAKER LISTA DE CELULARES -> MARKET (ok)
-FAKER HOSPITAL,CLINICA, VETERINARIOS, DENTISTA (OK)
-FAKER EXAMES MEDICOS E CIRURGIAS ( OK )
-FAKER ACADEMIA, TREINOS, MAQUINAS ( FAZENDO )
-FAKER CRMS
-FAKER TIMES DE FUTEBOL
-FAKER ANIMAIS
-FAKER DADOS GEOGRAFICOS ( BASEADO NO TERRITÓRIO BRASILEIRO )
-FAKER DE IMAGENS
-FAKER COMENTARIO PRA REDES SOCIAIS
+FAKER CRMS ( ANDERSON )
+FAKER TIMES DE FUTEBOL ( ANDERSON )
+FAKER ANIMAIS ( ANDERSON )
+FAKER DADOS GEOGRAFICOS ( CRISTIAN )
+FAKER DE IMAGENS ( CRISTIAN )
+FAKER COMENTARIO PRA REDES SOCIAIS( CRISTIAN )
