--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,12 @@
-FAKER CRMS ( ANDERSON )
-FAKER TIMES DE FUTEBOL ( ANDERSON )
-FAKER ANIMAIS ( ANDERSON )
+FAKER CRMS ( ANDERSON ) ( CRIAR FABRIC E HELPER DE CRM)
+FAKER ANIMAIS ( ANDERSON  )( CRIAR FABRIC E HELPER DE ANIMALS)
+FAKER DE BANDAS BRASILEIRAS ( ANDERSON ) ( CRIAR FABRIC E HELPER DE MUSIC)
+FAKER TIMES DE FUTEBOL E BASQUETE ( ANDERSON ) ( CRIAR FABRIC E HELPER DE SPORTS)
+
+==============================================
+
 FAKER DADOS GEOGRAFICOS ( CRISTIAN )
 FAKER DE IMAGENS ( CRISTIAN )
 FAKER COMENTARIO PRA REDES SOCIAIS( CRISTIAN )
+FAKER DE ORGÃOS GOVERNAMENTAIS (CRISTIAN)
+
